--- a/DZ3CIRUS.html
+++ b/DZ3CIRUS.html
@@ -2,12 +2,10 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <p>Сначала ЛКМ строится многоугольник,
-        по нажатию ПКМ от достраивает последний кусок.
-        После этого по ЛКМ строятся отрезки</p>
+    <p>Сначала ЛКМ строится многоугольник,по нажатию ПКМ достраивает последний кусок.После этого по ЛКМ строятся отрезки</p>
 </head>
 <BODY>
-<canvas id="canvas" width="800" height="800" style='border:5px solid #ff9e00'>
+<canvas id="dz3" width="800" height="800" style='border:5px solid #ff9e00'>
 </canvas>
 <script>
     function Line(ctx, x0, y0, x1, y1) {
@@ -46,7 +44,7 @@
     }
 </script>
 <script>
-    var canvas = document.getElementById("canvas");
+    var canvas = document.getElementById("dz3");
     var ctx = canvas.getContext("2d");
 
     var state = 0;
