--- a/DZ4SOBEL.html
+++ b/DZ4SOBEL.html
@@ -5,7 +5,7 @@
     <title>Фильтр Собеля</title>
 </head>
 <body>
-<canvas id='canvas' width='100px' height='100px' style="border: 1px solid black"></canvas>
+<canvas id='dz4' width='100px' height='100px' style="border: 1px solid black"></canvas>
 <canvas id='sobel' width="100px" height="100px" style="border: 1px solid black"></canvas>
 <script>
     function Fx(imgData, w, h, x, y) {
@@ -31,7 +31,7 @@
     }
 </script>
 <script>
-    var canvas = document.getElementById('canvas');
+    var canvas = document.getElementById('dz4');
     var ctx = canvas.getContext('2d');
 
     var w = 50;
